* Feature: Issue #78: Duplicate ARTIST to ALBUMARTIST tag if empty
* Feature: Issue #79: Added Docker support.
* Fixed deprecation: 2021-03-17 - f7db77bd87 - lavc 58.133.100 - codec.h
  Deprecated av_init_packet()
* Fixed API compatitbility: Many pointers made const as of 2021-04-27. Although
  reasonable, this breaks API compatibility with versions older than 59.0.100,
* Bugfix:

Preparing release 2.2

Important changes in 2.2 (2021-02-06)

This is a maintenance release, bugfixes only.

* Bugfix: Issue #75: Fix crash when opening mp3 output with Dolphin.
* Bugfix: Issue #70: Possible crash in Buffer::init: Should not assert if duration is 0
          (and thus segment count 0). Report internal error and go on.
* Bugfix: Issue #70: Do not set duration to 0 from cache but leave unchanged. Caused HLS
          transcoding to fail if more than one transcoder was concurrently started.
* Bugfix: Possible crash in transcoder_thread: Decoder object could have been used
          after being freed.
* Bugfix: Stupid blooper. WAV and AIFF size was always calculated for a mono file,
          thus for stereo files resulting in only half the correct size.
* Bugfix: Corrected documentation, "make checks" should read "make check", funny this
          went unnoticed for over 3 years...
* Bugfix: Issue #74: Album arts were only copied from MP3/4 sources. Removed restriction,
          if the input file contains an album art it will be copied to the target (if
          supported, of course, e.g., to mp3 or mp4. Ogg is not yet supported because
          embedding album arts in Ogg can only be done by an unofficial workaround).
* Bugfix: Issue #71:: Virtual directories were missing dot and dot-dot nodes.

Important changes in 2.1 (2020-12-14)
  
* Feature: Add BLURAY_VIDEO_FORMAT_2160P (UHD)
* Feature: Implemented in 1.7, removed experimental state for --win_smb_fix now.
           Windows seems to access the files on Samba drives starting at the last 64K segment